# grace-gathering-cadres

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
src/ggcadres/: cadres.py  io.py
src/ggcadres/cli/: __init__.py
