[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
description = "Cadre/subgroup generator for Grace Gatherings."
name = "ggcadres"
requires-python = ">=3.10"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
gg-cadres = "ggcadres.cli:main"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["D407"]
