[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
description = "Cadre/subgroup generator for Grace Gatherings."
name = "ggcadres"
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
    "click ~= 8.1.0",
    "networkx ~= 3.1.0",
    "pre-commit ~= 3.6.0",
    "pyyaml ~= 6.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
gg-cadres = "ggcadres.cli:main"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["D407"]
